--- a/examples/50-physics/racing-game/index.html
+++ b/examples/50-physics/racing-game/index.html
@@ -39,23 +39,7 @@
 <body style="background-image:url('loading.webp');background-repeat:no-repeat;background-size:cover;">
 
   <!-- GAME: http://moygen.rf.gd/world/world.htm -->
-
-  <script>
-    function loadingText() { document.write('<div id="loadiv" style="padding:20px;color:black;font-size:40px;font-family:monospace;font-weight:bold;;">Loading...<span style="font-size:20px;color:#ffe764;">(about 10MB)</span></div>'); }
-    loadingText();
-
-    function el(a) { return document.getElementById(a); }
-    function da(a, b) { if (el(a)) { el(a).innerHTML = b; } }
-    function elv(a) { return document.getElementById(a).value; }
-    function els(a) { return document.getElementById(a).style; }
-    function fixAngleDeg(a) { if (a > 180) { a -= 360; } else if (a < -Math.PI / 2) { a += 360; } return a; }
-    function fixAngleRad(a) { if (a > Math.PI) { a -= Math.PI * 2; } else if (a < -Math.PI) { a += Math.PI * 2; } return a; }
-
-    var heightLimit = 1;
-    var widthLimit = 1;
-    var SCREEN_HEIGHT = window.innerHeight * heightLimit;
-    var SCREEN_WIDTH = window.innerWidth * widthLimit;
-  </script>
+  <script src="globals.js"></script>
 
   <script src="ammo.asm.js"></script><!-- bullet physics ported to javascript -->
   <script src="three3.js"></script><!-- 3d rendering library for javascript -->
@@ -65,6 +49,7 @@
   <script src="OBJLoader.js"></script><!-- .obj model loader -->
   <script src="dat.gui.js"></script><!-- user interface -->
   <script src="DecalGeometry.js"></script><!-- for putting decals on models -->
+
   <script src="main.js"></script>
 
   <div id="tester"
